--- a/_layout/default.html
+++ b/_layout/default.html
@@ -7,10 +7,10 @@
 <body>
 <h1>{{ page.title }}</h1>
 <div>
-    {% for book in site.data.books %}
+    {% for item in site.data.books %}
     <div>
-        <h1>{{ book.title }}</h1>
-        <h1>{{ book.author }}</h1>
+        <h1>{{ item.title }}</h1>
+        <h1>{{ item.author }}</h1>
     </div>
     {% endfor %}
 </div>
