--- a/_layout/default.html
+++ b/_layout/default.html
@@ -14,6 +14,12 @@
     </div>
     {% endfor %}
 </div>
+<section>
+    {{ content }}
+</section>
+<footer>
+    &copy; to me
+</footer>
 
 
 </body>
