--- a/_layout/default.html
+++ b/_layout/default.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <h1>{{ page.title }}</h1>
-<div>
+<ul>
     {% for item in site.data.books %}
-    <div>
-        <h1>{{ item.title }}</h1>
-        <h1>{{ item.author }}</h1>
-    </div>
+
+        <li>{{ item.title }}</li>
+        <li>{{ item.author }}</li>
+
     {% endfor %}
-</div>
+</ul>
 <section>
     {{ content }}
 </section>
