refactor css-path

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,10 @@
 <nav>
-    <a href="/">Home</a>
-    <a href="/test/">test</a>
-    <a href="/test2/">test2</a>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/test/">test</a></li>
+        <li><a href="/test2/">test2</a></li>
+    </ul>
+
+
+
 </nav>
