--- a/style.css
+++ b/style.css
@@ -6,7 +6,19 @@ body{
 nav{
     font-color: red;
 }
+nav.ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 
-nav a {
-    font-color: red;
+nav.li {
+  float: left;
+}
+
+nav.li a {
+  display: block;
+  padding: 8px;
+  background-color: #dddddd;
 }
