--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@ body{
 nav{
     font-color: red;
 }
-nav.ul {
+nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-nav.li {
+nav li {
   float: left;
 }
 
-nav.li a {
+nav li a {
   display: block;
   padding: 8px;
   background-color: #dddddd;
