--- a/style.css
+++ b/style.css
@@ -3,21 +3,18 @@ body{
     font-size: 12px;
 }
 
-nav{
-    font-color: red;
-}
-nav ul {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-nav li {
+li {
   float: left;
 }
 
-nav li a {
+li a {
   display: block;
   padding: 8px;
   background-color: #dddddd;
