--- a/style.css
+++ b/style.css
@@ -3,18 +3,19 @@ body{
     font-size: 12px;
 }
 
-ul {
+nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-li {
+nav li {
   float: left;
+  display: inline;
 }
 
-li a {
+nav li a {
   display: block;
   padding: 8px;
   background-color: #dddddd;
