--- a/style.css
+++ b/style.css
@@ -3,20 +3,36 @@ body{
     font-size: 12px;
 }
 
+
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #666;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 nav li {
   float: left;
-  margin: 5px 5px 5px 5px;
+  border-right: 1px solid #bbb;
 }
 
 nav li a {
-  display: inline;
-  padding: 8px;
-  background-color: #dddddd;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+nav li a:hover {
+  background-color: #111;
+}
+
+nav .active {
+  background-color: #4CAF50;
 }
