--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/test/">test</a></li>
+        <li><a href="/test2/">test2</a></li>
     </ul>
 </nav>
