--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-book"></span> Leonie's Bücher Rezensionen</a>
+        <a class="navbar-brand" href="home"><img src="..." alt="Logo">Leonie's Bücher Rezensionen</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="books">Bücher</a>
                 <a class="nav-link disabled" href="authors" tabindex="-1" aria-disabled="true">Autoren</a>
             </div>
