--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><a class="navbar-brand" href="home"> Leonie's Bücher Rezensionen</a>
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><a class="navbar-brand" href="/"> Leonie's Bücher
+        Rezensionen</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
