--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="books">Bücher</a>
                 <a class="nav-link disabled" href="authors" tabindex="-1" aria-disabled="true">Autoren</a>
+                <a class="nav-link" href="about">Über mich</a>
             </div>
         </div>
     </div>
